28/02/11 -*- Version 2.0.1 -*-

25/02/11 Julien Dutheil
* Improve drawing algorithms.

18/02/11 Julien Dutheil
* Fixed bug #27

07/02/11 -*- Version 2.0.0 -*-

07/02/11 Julien Dutheil
* Proposed a fix for bug #25. SubstitutionModelSet now inherits from
  ParameterAliasable.

02/12/10 Julien Dutheil
* Improved SubstitutionCount class to allow multiple counts.
* Added simple GC<->AT substitution count.

15/11/10 Julien Dutheil
* Added topology comparison tools.
* New unit testing framework.

18/05/10 Julien Dutheil
* new TreeDrawing framework, fully event-driven.

24/03/10 -*- Version 1.9.0 -*-

11/03/10 Julien Dutheil
* Nexus format now allows lower case keywords ([biopp-devel-forum:287])
* GY94 and MG94 now have frequency option like YN98.

10/03/10 Julien Dutheil
* Added stationarity option in non-homogeneous models.

09/03/10 Julien Dutheil
* Added reparametrization option in optimization methods.

26/02/10 Nicolas Rochette and Julien Dutheil
* More efficient TreeTemplateTools::getDistanceMatrix.

08/12/10 Julien Dutheil
* Now compiles with -Weffc++!
* A lot of code updates and small bugs fixed!
* BioNJ is now faster when using the full constructor.
* Parsimony and Likelihood data structure improved.
* Nucleotide and ProteinSubstitutionModels are now full interfaces.
* No more ProteinSubstitutionModelWithFrequencies... corresponding models take
as input an optional FrequenciesSet object.

29/12/09 Julien Dutheil
* Improved TreeDrawing classes: added Listeners.

26/12/09 Julien Dutheil
* Removed all "using namespace std" in header files.
* Code cleaning.

15/12/09 Laurent Guegen
* Added classes for mixed models.

08/12/09 Julien Dutheil
* First draft of new TreeLikelihood model iterators
* Updated TreeLikelihood interfaces
* New interface SitePartitionTreeLikelihood interface, allowing different
  sites to have a distinct substitution model.

24/11/09 Julien Dutheil
* Cleaned substitution mapping classes, and added a new one.

31/10/09 Julien Dutheil