@@ -1,4 +1,5 @@
 #include "Mapping/AnalyticalSubstitutionCount.h"
+#include "Mapping/DecompositionSubstitutionCount.h"
 #include "Mapping/IndexToCount.h"
 #include "Mapping/OneJumpSubstitutionCount.h"
 #include "Mapping/ProbabilisticSubstitutionMapping.h"
